--- a/framework/assets/css/framework.css
+++ b/framework/assets/css/framework.css
@@ -23,60 +23,72 @@
     --color-salmon: #E6895A;
 }
 /*media escritorio*/
-@media screen and (min-width: 800px){
+@media screen and (min-width: 800px)
+{
 
    
 
 
- .container
- {
-     width: 95%;
-     margin-left: auto;
-     margin-right:auto;
- }
-
-
- body {
-        font-family: var(--font-family-base);
-        font-size: 1rem;
-        line-height: 1.5;
-        background-image: url(imagen/fondo_2.png);
-        background-size: cover;
-        margin: 0px;
-        font-weight: 400;
-        max-width: 100%;
+    .container
+    {
+        width: 95%;
+        margin-left: auto;
+        margin-right:auto;
     }
 
 
-/* Barra de Navegación*/
+    body {
+            font-family: var(--font-family-base);
+            font-size: 1rem;
+            line-height: 1.5;
+            background-image: url(imagen/fondo_2.png);
+            background-size: cover;
+            margin: 0px;
+            font-weight: 400;
+            max-width: 100%;
+        }
 
-.container-nav
-{
-    width: 100%;
-}
-.nav-prueba{
-        font-weight: bold;
-        padding: 15px 40px;
-        background-color: var(--color-blue);
-        display: flex;
-        justify-content: space-evenly;
-        flex-grow: 0;
-        flex-shrink: 1;
-        flex-basis: 100%;
-}
-.nav-item a{
-        color: var(--color-salmon);
-        text-decoration: none;
-}
- a:hover{
-        color: var(--color-white);   
-    
-}
-.nav-item a:visited{
-    color: rgb(174, 255, 82);
-}
 
-}
+    /* Barra de Navegación*/
+
+    .container-nav
+    {
+        width: 100%;
+    }
+    .nav-prueba{
+            font-weight: bold;
+            padding: 15px 40px;
+            background-color: var(--color-blue);
+            display: flex;
+            justify-content: space-evenly;
+            flex-grow: 0;
+            flex-shrink: 1;
+            flex-basis: 100%;
+    }
+    .nav-item a{
+            color: var(--color-salmon);
+            text-decoration: none;
+    }
+    a:hover{
+            color: var(--color-white);   
+        
+    }
+    .nav-item a:visited{
+            color: rgb(174, 255, 82);
+    }
+
+    /*Carrusel Grande
+    .w-100 {
+        width: 62.5% !important;
+        height: 80vh;}*/
+
+.carousel-inner > .item > img {
+    object-fit: scale-down;
+    height: 50vh;
+    width: 80%;
+  }
+  
+} 
     
 
 
