--- a/framework/assets/css/framework.css
+++ b/framework/assets/css/framework.css
@@ -4,9 +4,6 @@
     padding: 0;
     margin: 0;
 }
-* {
-    box-sizing: border-box;
-  }
 
 * {
     list-style: none;
@@ -82,10 +79,14 @@
         width: 62.5% !important;
         height: 80vh;}*/
 
-.carousel-inner > .item > img {
-    object-fit: scale-down;
-    height: 50vh;
-    width: 80%;
+.container-fluid{
+    background-color: aqua;
+    margin-top:0%;
+}
+.container-carousel-grande {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
   }
   
 } 
