--- a/framework/assets/css/framework.css
+++ b/framework/assets/css/framework.css
@@ -92,10 +92,56 @@
 } 
     
 
+/*Tarjetas*/
+.container-tarjetas {
+    margin: 0 auto;
+    max-width: 1000px;
+    height: 430px;
 
-    
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
 
 
+}
+
+.container-tarjetas .tarjeta {
+    width: 330px;
+    height: 430px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    margin: 20 px;
+    text-align: center;
+    transition: all 0.25s;
+
+
+}
+   
+.container-tarjetas .tarjeta:hover {
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.container-tarjetas .tarjeta img {
+    width: 330px;
+    height: 220px;
+}
+
+.container-tarjetas .tarjeta h4 {
+    font-weight: 600;
+}
+
+.container-tarjetas .tarjeta p {
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.container-tarjetas .tarjeta a {
+    font-weight: 500;
+    text-decoration: none;
+    color: #3498;
+}
 
 
 
