--- a/framework/assets/css/framework.css
+++ b/framework/assets/css/framework.css
@@ -15,20 +15,20 @@
 
 :root{
     --font-family-base: 'Atkinson Hyperlegible', Arial, Helvetica, sans-serif;
-    --color-blue: #0A4487;
+    --color-magenta: #B5104A;
     --color-white: #fff;
     --color-salmon: #E6895A;
 }
 /*media escritorio*/
 @media screen and (min-width: 800px)
-{
+{}
 
    
 
 
     .container
     {
-        width: 95%;
+        width: 100%;
         margin-left: auto;
         margin-right:auto;
     }
@@ -51,11 +51,13 @@
     .container-nav
     {
         width: 100%;
+      
     }
     .nav-prueba{
+            width: 100%;
             font-weight: bold;
             padding: 15px 40px;
-            background-color: var(--color-blue);
+            background-color: var(--color-magenta);
             display: flex;
             justify-content: space-evenly;
             flex-grow: 0;
@@ -80,21 +82,43 @@
         height: 80vh;}*/
 
     .container-fluid{
-        background-color: aqua;
+        background-color: white;
         margin-top:0%;
     }
-    .container-carousel-grande {
+    
+     .container-carousel-grande {
         width: 50%;
+        height: 70%;
         margin-left: auto;
         margin-right: auto;
     }
-    
-} 
-    
+    .carousel-item img {
+        height: 50%;
+        width: 70%;
+        overflow:hidden;
+       }
+/*Carrusel pequeño*/ 
+.container-fluid-pequeño{
+    background-color: white;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
 
+ .container-carousel-pequeño {
+    width: 30%;
+    height: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.carousel-item img {
+    height: 30%;
+    width: 50%;
+    overflow:hidden;
+   }
 /*Tarjetas*/
 .container-tarjetas {
     margin: 0 auto;
+    padding-top: 2rem;
     max-width: 1000px;
     height: 430px;
 
@@ -106,7 +130,7 @@
 }
 
 .container-tarjetas .tarjeta {
-    width: 330px;
+    width: 1fr;
     height: 430px;
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
@@ -142,8 +166,35 @@
     text-decoration: none;
     color: #3498;
 }
+/*banner*/
+.container-banner {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    max-width: 100%;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 5% 80% 5%;
+    grid-gap: 20px;
 
 
+}
+
+.container-banner1{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    background-color: var(--color-magenta);
+}
+
+/*footer*/
+.container-footer{
+    margin-top: 4rem;
+    margin-bottom: 0;
+    width: 100%;
+    height: 500px;
+    background-color: var(--color-magenta);
+}
 
 
 /*fin media escritorio*/
