--- a/framework/assets/css/framework.css
+++ b/framework/assets/css/framework.css
@@ -199,6 +199,26 @@
     padding: 4rem;
 }
 
+.container-contenido {
+    display: grid;
+    grid-template-columns: 0.2fr 1fr 1fr 0.2fr;
+    gap: 20px;
+}
+
+.container-imagenes {
+    grid-column: 2;
+    grid-row: 1;
+    justify-content: center;
+}
+
+.container-imagenes img{
+    max-width: 30rem;
+}
+
+.container-texto {
+    grid-column: 3;
+    grid-row: 1;
+}
 
 /*fin media escritorio*/
 /*media télefono*/ 
