--- a/framework/assets/css/framework.css
+++ b/framework/assets/css/framework.css
@@ -199,6 +199,10 @@
     padding: 4rem;
 }
 
+#corporacion{
+    text-decoration: none;
+    color: #fff;
+}
 .container-contenido {
     display: grid;
     grid-template-columns: 0.2fr 1fr 1fr 0.2fr;
@@ -240,7 +244,19 @@
     margin-right: auto;
     padding: 2rem;
 }
-    
+
+.container-texto-advertencia{
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row: 1;
+    text-align: center;
+}
 /*Final: Video Responsive */
 
 /*fin media escritorio*/
