--- a/sitio-2/sitio-2.css
+++ b/sitio-2/sitio-2.css
@@ -81,21 +81,23 @@
         width: 62.5% !important;
         height: 80vh;}*/
 
-    .container-fluid{
-        background-color: #000;
-        margin-top:0%;
-    }
-    
-     .container-carousel-grande {
-        width: 100%;
-        height: 100%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .carousel-item img {
-        height: 100%;
-        width: 100%;
-       }
+   
+        .container-fluid{
+            background-color: white;
+            margin-top:0%;
+        }
+        
+         .container-carousel-grande {
+            width: 50%;
+            height: 70%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .carousel-item img {
+            height: 50%;
+            width: 70%;
+            overflow:hidden;
+           }
   
 /*Tarjetas*/
 .container-tarjetas{
@@ -175,7 +177,7 @@
     margin-right: auto;
     display: flex;
     justify-content: center;
-    padding-top: 4rem;
+    padding: 4rem;
 }
 
 #corporacion{
