--- a/sitio-2/assets/css/sitio-2.css
+++ b/sitio-2/assets/css/sitio-2.css
@@ -83,7 +83,6 @@
 
    
         .container-fluid{
-            background-color: white;
             margin-top:0%;
         }
         
@@ -93,6 +92,11 @@
             margin-left: auto;
             margin-right: auto;
         }
+        .carousel-item img {
+            height: 50%;
+            width: 70%;
+            overflow:hidden;
+           }
 /*Tarjetas*/
 .container-tarjetas{
     margin: 0 auto;
